<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="30dp"
    android:orientation="vertical"
    android:gravity="center_vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/emoji_image_view"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_waving_hand"
        android:layout_gravity="center"
        android:contentDescription="@string/hello" />

    <TextView
        style="@style/Text.Medium"
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sign_in"
        android:textSize="24sp"
        android:textColor="@color/color_primary"
        android:gravity="center" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputLayout"
        android:id="@+id/email_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/email"
        android:nextFocusDown="@id/password_input_layout"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputLayout"
        android:id="@+id/password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:hint="@string/password"
        android:nextFocusDown="@id/sign_in_button"
        app:errorEnabled="true"
        app:endIconMode="password_toggle" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        style="@style/Text"
        android:id="@+id/remember_me_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/remember_me" />

    <Button
        style="@style/Button"
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_gravity="center"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:text="@string/sign_in" />

    <TextView
        style="@style/Text.Medium"
        android:id="@+id/or_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:text="@string/or" />

    <TextView
        style="@style/Text.Medium"
        android:id="@+id/sign_up_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:text="@string/sign_up"
        android:textColor="@color/color_primary" />

</androidx.appcompat.widget.LinearLayoutCompat>